css/style.css
/* ... */
.section-title {
    font-size: 22px;
    font-weight: 700;
}

.large-bold {
    font-size: 18px;
    font-weight: 700;
}

.medium-regular {
    font-size: 16px;
    font-weight: 400;
}

/* info-group */
.filter span {
    font-size: 17px;
    font-weight: 700;
}

/* accommodation, trending & activities */
.card-title {
    font-size: 16px;
    font-weight: 700;
}

.card-subtitle {
    font-size: 14px;
    font-weight: 400;
}

.euro {
    font-weight: 600;
}

/* ==============================================
   2.0 GLOBAL SETTINGS
   ============================================== */

/*
2.1 Body, main-container and main tag
 */
body {
    /* layout */
    display: flex;
    justify-content: center;
    /* dimensions and spacing */
    margin-top: 2px;
}

.main-container {
    /* layout */
    display: flex;
    flex-direction: column;
    align-items: center;
    /* dimensions and spacing */
    width: 100%;
    max-width: 1440px;
    min-width: 320px;
    box-sizing: border-box;
    gap: 30px;
}

main {
    /* layout */
    display: flex;
    flex-direction: column;
    /* dimensions and spacing */
    padding: 0 50px;
    gap: 35px;
}

.section-title, .card-title, figure, p, h2 {
    margin: 0;
}

/*
2.2 Cards
*/
.card {
    /* colors */
    background-color: white;
    /* dimensions and spacing */
    box-sizing: border-box;
    /* borders and background */
    border-radius: 20px;
    box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.1);
}

.card img {
    object-fit: cover;
}

/*
2.3 Bullets and Links
*/
ul {
    list-style-type: none;
    margin: 0; /* remove default margin */
    padding-left: 0; /* remove 40px default padding that comes with ul bullets */
}

a {
    text-decoration: none;
    color: black;
}

/* ==============================================
    3.0 HEADER
    ============================================== */

header {
    /* Layout */
    display: flex;
    justify-content: space-between;
    align-items:start;
    align-self: stretch;
}

/*
3.1 Logo
*/
header .logo {
    padding: 30px 50px;
    gap: 10px;
}

header .logo img {
    width: 61px;
    height: 19px;
}

/*
3.2 Navigation
*/
nav {
    padding: 0 25px;
}

nav ul {
    /* Layout */
    display: flex;
    justify-content: space-between;
    /* dimensions and spacing */
    width: 329px;
}

nav ul li {
    /* dimensions and spacing */
    padding-top: 20px;
    margin: 0;
}

nav li a {
    /* dimensions and spacing */
    padding-top: 20px;
}

nav li a:hover {
    color: var(--blue);
    border-top: 2px solid var(--blue);
}

/* ==============================================
    4.0 INFO-GROUP
    ============================================== */

.info-group {
    /* layout */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    /* dimensions and spacing */
    gap: 35px;
}

/*
4.1 Headline
 */
.headline {
    /* layout */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    /* dimensions and spacing */
    gap: 8px;
}

/*
4.2 Search-bar
 */
.search-bar form {
    /* layout */
    display: inline-flex;
    align-items: center;
    /* dimensions and spacing */
    gap: 24px;
    /* borders and background */
    border: 1px solid var(--lightgrey);
    border-radius: 15px;
}

.search-bar form label {
    /* layout */
    display: flex;
    justify-content: center;
    align-items: center;
    /* dimensions and spacing */
    width: 50px;
    height: 49px;
    /* borders and background */
    border-radius: 15px 0 0 15px;
    background-color: var(--lightgrey);
}

.search-bar form input {
    border-style: none;
}

.search-bar form input:focus {
    outline: none;
}

.search-bar form button {
    /* layout */
    display: flex;
    align-items: center;
    /* dimensions and spacing */
    height: 49px;
    padding: 15px 16px;
    gap: 10px;
    /* borders and background */
    border: 1px solid var(--blue, #0065FC);
    border-radius: 0 15px 15px 0;
    background: var(--blue, #0065FC);
}

#search-text {
    display:inline;
 }

 #search-icon {
    display:none;
 }

 /*
    4.3 Filter-bar
 */
 .filter-bar {
     /* layout */
     display: flex;
     align-items: center;
     /* dimensions and spacing */
     gap: 15px;
 }

 .filters {
     /* layout */
     display: inline-flex;
     /* dimensions and spacing */
     gap: 15px;
 }

.filter {
    /* layout */
    display: flex;
    align-items: center;
    /* dimensions and spacing */
    height: 50px;
    padding: 4px 19px;
    gap: 10px;
    /* borders and background */
    border: 2px solid var(--grey);
    border-radius: 50px;
    background-color: white;
}

.filter:hover {
    background-color: var(--paleblue);
}

/*
4.4 Info-bar
*/

.info-bar {
    /* layout */
    display: flex;
    align-items: center;
    /* dimensions and spacing */
    gap: 10px;
}

.info-bar i {
    /* layout */
    display: flex;
    justify-content: center;
    align-items: center;
    /* dimensions and spacing */
    min-width: 24px;
    min-height: 24px;
    /* borders and background */
    border: 1px solid var(--grey);
    border-radius: 50%;
}

/* ==============================================
    5.0 ACCOMMODATIONS AND TRENDING
    ============================================== */

.accommodation-and-trending {
    /* layout */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* dimensions and spacing */
    gap: 40px;
}

.accommodation-and-trending section {
    /* dimensions and spacing */
    padding: 30px;
    gap: 30px;
    box-sizing: border-box;
    /* borders and background */
    border-radius: 15px;
    background-color: var(--lightgrey);
}

/*
5.1 Accommodations
 */
.accommodation {
    /* layout */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
    /* dimensions and spacing */
    width: 65%;
    padding: 30px;
    gap: 30px;
}
/* ... */

